# pgstorm

./: .gitignore  README.md  pyproject.toml
docs/: README.md  api-reference.md  engine.md  functions.md  installation.md  models.md  observers.md  queryset.md  subqueries.md
example/: model.py  observers_example.py
pgstorm/: __init__.py  models.py  observers.py  operator.py  prefetch.py  schema.py  types.py  views.py
pgstorm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pgstorm/columns/: __init__.py  base.py  binary.py  bit.py  boolean.py  character.py  datetime.py  geometric.py  json_types.py  money.py  network.py  numeric.py  snapshot.py  textsearch.py  uuid_type.py  vector.py  xml_type.py
pgstorm/engine/: __init__.py  base.py  context.py  create.py  interface.py  observer_runner.py  query_utils.py
pgstorm/engine/interfaces/: __init__.py  asyncpg.py  psycopg2.py  psycopg3_async.py  psycopg3_sync.py
pgstorm/functions/: aggregate.py  expression.py  func.py
pgstorm/queryset/: base.py  parser.py  prefetch_impl.py
